src/test/deca/context/invalid/new_non_classe.deca
//Description :
//    Test d'un new sur un type non classe
//
// Résultats:
//    Ligne 11 : 
//
// Historique:
//    créé le 21/01/2017

{
    int n = new int();
}